# qtdf-public

./: .gitignore  AGENTS.md  CLAUDE.md  NOTICE  README.md  SCHEMA.md  calibrate_emulator.py  emulator_calibration.json  fleet_report.py  ingest_ibm_snapshots.py  phase2_demo.py  phase3_demo.py  pyproject.toml  seed_from_eng_rf_002.py  verify.sh
.github/workflows/: ci.yml  publish.yml
captures/: LOT-EMU-26H_W01_load01.json
plans/: coherence_screen_v1.json
qtdf/: __init__.py  cli.py  core.py  demo.py  store.py  touchstone.py  validate.py
qtdf/executive/: __init__.py  adapters.py  backends.py  plan.py  run.py
qtdf/vfridge/: __init__.py  measure.py  wafer.py
records/: ENG-RF-002_optAB_GSG.qtdf.json
tests/: test_cli.py  test_executive.py  test_qtdf.py  test_store_v02.py  test_vfridge.py
